# rk2

./: CMakeLists.txt  CrappyArrayInventory.cpp  CrappyArrayInventory.h
.github/workflows/: cmake.yml
tests/: CMakeLists.txt  CrappyArrayInventory.cpp  CrappyArrayInventory.h  array_test.cpp
